cbits/cool_windows/consoleapi3.h

WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasA(
    _In_ LPSTR Source,
    _Out_writes_(TargetBufferLength) LPSTR TargetBuffer,
    _In_ DWORD TargetBufferLength,
    _In_ LPSTR ExeName
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasW(
    _In_ LPWSTR Source,
    _Out_writes_(TargetBufferLength) LPWSTR TargetBuffer,
    _In_ DWORD TargetBufferLength,
    _In_ LPWSTR ExeName
    );
#define GetConsoleAlias  GetConsoleAliasW
#define GetConsoleAlias  GetConsoleAliasA
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesLengthA(
    _In_ LPSTR ExeName
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesLengthW(
    _In_ LPWSTR ExeName
    );
#define GetConsoleAliasesLength  GetConsoleAliasesLengthW
#define GetConsoleAliasesLength  GetConsoleAliasesLengthA
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesLengthA(
    VOID
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesLengthW(
    VOID
    );
#define GetConsoleAliasExesLength  GetConsoleAliasExesLengthW
#define GetConsoleAliasExesLength  GetConsoleAliasExesLengthA
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesA(
    _Out_writes_(AliasBufferLength) LPSTR AliasBuffer,
    _In_ DWORD AliasBufferLength,
    _In_ LPSTR ExeName
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesW(
    _Out_writes_(AliasBufferLength) LPWSTR AliasBuffer,
    _In_ DWORD AliasBufferLength,
    _In_ LPWSTR ExeName
    );
#define GetConsoleAliases  GetConsoleAliasesW
#define GetConsoleAliases  GetConsoleAliasesA
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesA(
    _Out_writes_(ExeNameBufferLength) LPSTR ExeNameBuffer,
    _In_ DWORD ExeNameBufferLength
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesW(
    _Out_writes_(ExeNameBufferLength) LPWSTR ExeNameBuffer,
    _In_ DWORD ExeNameBufferLength
    );
#define GetConsoleAliasExes  GetConsoleAliasExesW
#define GetConsoleAliasExes  GetConsoleAliasExesA
WINBASEAPI
VOID
APIENTRY
ExpungeConsoleCommandHistoryA(
    _In_ LPSTR ExeName
    );
WINBASEAPI
VOID
APIENTRY
ExpungeConsoleCommandHistoryW(
    _In_ LPWSTR ExeName
    );
#define ExpungeConsoleCommandHistory  ExpungeConsoleCommandHistoryW
#define ExpungeConsoleCommandHistory  ExpungeConsoleCommandHistoryA
WINBASEAPI
BOOL
APIENTRY
SetConsoleNumberOfCommandsA(
    _In_ DWORD Number,
    _In_ LPSTR ExeName
    );
WINBASEAPI
BOOL
APIENTRY
SetConsoleNumberOfCommandsW(
    _In_ DWORD Number,
    _In_ LPWSTR ExeName
    );
#define SetConsoleNumberOfCommands  SetConsoleNumberOfCommandsW
#define SetConsoleNumberOfCommands  SetConsoleNumberOfCommandsA
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryLengthA(
    _In_ LPSTR ExeName
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryLengthW(
    _In_ LPWSTR ExeName
    );
#define GetConsoleCommandHistoryLength  GetConsoleCommandHistoryLengthW
#define GetConsoleCommandHistoryLength  GetConsoleCommandHistoryLengthA
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryA(
    _Out_writes_bytes_(CommandBufferLength) LPSTR Commands,
    _In_ DWORD CommandBufferLength,
    _In_ LPSTR ExeName
    );
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryW(
    _Out_writes_bytes_(CommandBufferLength) LPWSTR Commands,
    _In_ DWORD CommandBufferLength,
    _In_ LPWSTR ExeName
    );
#define GetConsoleCommandHistory  GetConsoleCommandHistoryW
#define GetConsoleCommandHistory  GetConsoleCommandHistoryA
WINBASEAPI
DWORD
APIENTRY
GetConsoleProcessList(
    _Out_writes_(dwProcessCount) LPDWORD lpdwProcessList,
    _In_ DWORD dwProcessCount
    );