src/System/Win32/Console/Console3.hsc


{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasA(
    _In_ LPSTR Source,
    _Out_writes_(TargetBufferLength) LPSTR TargetBuffer,
    _In_ DWORD TargetBufferLength,
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleAliasA" c_getConsoleAliasA :: LPSTR
                                                                     -> LPSTR
                                                                     -> DWORD
                                                                     -> LPSTR
                                                                     -> IO DWORD

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasW(
    _In_ LPWSTR Source,
    _Out_writes_(TargetBufferLength) LPWSTR TargetBuffer,
    _In_ DWORD TargetBufferLength,
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleAliasW" c_getConsoleAliasW :: LPWSTR
                                                                     -> LPWSTR
                                                                     -> DWORD
                                                                     -> LPWSTR
                                                                     -> IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleAlias  GetConsoleAliasW
#else
#define GetConsoleAlias  GetConsoleAliasA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesLengthA(
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleAliasLengthA" c_getConsoleAliasLengthA :: LPSTR
                                                                                 -> IO DWORD

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesLengthW(
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleAliasLengthW" c_getConsoleAliasLengthW :: LPWSTR
                                                                                 -> IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleAliasesLength  GetConsoleAliasesLengthW
#else
#define GetConsoleAliasesLength  GetConsoleAliasesLengthA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesLengthA(
    VOID
    );
 -}
foreign import ccall "windows.h GetConsoleAliasExesLengthA" c_getConsoleAliasExesLengthA :: IO DWORD
{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesLengthW(
    VOID
    );
 -}
foreign import ccall "windows.h GetConsoleAliasExesLengthW" c_getConsoleAliasExesLengthW :: IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleAliasExesLength  GetConsoleAliasExesLengthW
#else
#define GetConsoleAliasExesLength  GetConsoleAliasExesLengthA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesA(
    _Out_writes_(AliasBufferLength) LPSTR AliasBuffer,
    _In_ DWORD AliasBufferLength,
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleAliasesA" c_getConsoleAliasesA :: LPSTR
                                                                         -> DWORD
                                                                         -> LPSTR
                                                                         -> IO DWORD

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasesW(
    _Out_writes_(AliasBufferLength) LPWSTR AliasBuffer,
    _In_ DWORD AliasBufferLength,
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleAliasesW" c_getConsoleAliasesW :: LPWSTR
                                                                         -> DWORD
                                                                         -> LPWSTR
                                                                         -> IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleAliases  GetConsoleAliasesW
#else
#define GetConsoleAliases  GetConsoleAliasesA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesA(
    _Out_writes_(ExeNameBufferLength) LPSTR ExeNameBuffer,
    _In_ DWORD ExeNameBufferLength
    );
 -}
foreign import ccall "windows.h GetConsoleAliasExesA" c_getConsoleAliasExesA :: LPSTR
                                                                             -> DWORD
                                                                             -> IO DWORD

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleAliasExesW(
    _Out_writes_(ExeNameBufferLength) LPWSTR ExeNameBuffer,
    _In_ DWORD ExeNameBufferLength
    );
 -}
foreign import ccall "windows.h GetConsoleAliasExesW" c_getConsoleAliasExesW :: LPWSTR
                                                                             -> DWORD
                                                                             -> IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleAliasExes  GetConsoleAliasExesW
#else
#define GetConsoleAliasExes  GetConsoleAliasExesA
#endif -- !UNICODE
 -}
#endif {- _WIN32_WINNT >= 0x0501 -}


{- 
WINBASEAPI
VOID
APIENTRY
ExpungeConsoleCommandHistoryA(
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h ExpungeConsoleCOmmandHistoryA" c_expungeConsoleCommandHistoryA :: LPSTR
                                                                                               -> IO ()

{- 
WINBASEAPI
VOID
APIENTRY
ExpungeConsoleCommandHistoryW(
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h ExpungeConsoleCOmmandHistoryW" c_expungeConsoleCommandHistoryW :: LPSTR
                                                                                               -> IO ()
{- 
#ifdef UNICODE
#define ExpungeConsoleCommandHistory  ExpungeConsoleCommandHistoryW
#else
#define ExpungeConsoleCommandHistory  ExpungeConsoleCommandHistoryA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
BOOL
APIENTRY
SetConsoleNumberOfCommandsA(
    _In_ DWORD Number,
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h SetConsoleNumberOfComandsA" c_setConsoleNumberOfCommandsA :: DWORD
                                                                                          -> LPSTR
                                                                                          -> IO BOOL

{- 
WINBASEAPI
BOOL
APIENTRY
SetConsoleNumberOfCommandsW(
    _In_ DWORD Number,
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h SetConsoleNumberOfComandsW" c_setConsoleNumberOfCommandsW :: DWORD
                                                                                          -> LPWSTR
                                                                                          -> IO BOOL

{- 
#ifdef UNICODE
#define SetConsoleNumberOfCommands  SetConsoleNumberOfCommandsW
#else
#define SetConsoleNumberOfCommands  SetConsoleNumberOfCommandsA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryLengthA(
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleCommandHistoryLengthA" c_getConsoleCommandHistoryLengthA :: LPSTR
                                                                                                   -> IO DWORD

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryLengthW(
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleCommandHistoryLengthW" c_getConsoleCommandHistoryLengthW :: LPWSTR
                                                                                                   -> IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleCommandHistoryLength  GetConsoleCommandHistoryLengthW
#else
#define GetConsoleCommandHistoryLength  GetConsoleCommandHistoryLengthA
#endif -- !UNICODE
 -}

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryA(
    _Out_writes_bytes_(CommandBufferLength) LPSTR Commands,
    _In_ DWORD CommandBufferLength,
    _In_ LPSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleCommandHistoryA" c_getConsoleCommandHistoryA :: LPWSTR
                                                                                       -> DWORD
                                                                                       -> LPSTR
                                                                                       -> IO DWORD

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleCommandHistoryW(
    _Out_writes_bytes_(CommandBufferLength) LPWSTR Commands,
    _In_ DWORD CommandBufferLength,
    _In_ LPWSTR ExeName
    );
 -}
foreign import ccall "windows.h GetConsoleCommandHistoryW" c_getConsoleCommandHistoryW :: LPWSTR
                                                                                       -> DWORD
                                                                                       -> LPWSTR
                                                                                       -> IO DWORD

{- 
#ifdef UNICODE
#define GetConsoleCommandHistory  GetConsoleCommandHistoryW
#else
#define GetConsoleCommandHistory  GetConsoleCommandHistoryA
#endif -- !UNICODE
 -}

#if (_WIN32_WINNT >= 0x0501)

{- 
WINBASEAPI
DWORD
APIENTRY
GetConsoleProcessList(
    _Out_writes_(dwProcessCount) LPDWORD lpdwProcessList,
    _In_ DWORD dwProcessCount
    );
 -}
foreign import ccall "windows.h GetConsoleProcessList" c_getConsoleProcessList :: LPDWORD
                                                                               -> DWORD
                                                                               -> IO DWORD

#endif {- _WIN32_WINNT >= 0x0501 -}
